# Sorts

./: .clang-format  .gitignore  CMakeLists.txt  main.c  main.cpp  make_run.sh
Insert/BinarySort/: insert.c  insert.h
Insert/InsertionSort/: insert.c  insert.h
Insert/ShellSort/: insert.c  insert.h
Select/: SelectionSort.c  SelectionSort.h
SqList/: sqList.c  sqList.h
Swap/: BubbleSort.c  BubbleSort.h  QuickSort.c  QuickSort.h
